--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 
 <body>
   <canvas id="canvas"></canvas>
+  <div class="popup">
+    <div class="text">
+      <h2 class="popup-title">You chose <span class="span-title"></span></h2>
+      <p class="popup-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, quia?</p>
+      <button class="to-website-btn">Continue to website</button>
+      <button>Cancel</button>
+    </div>
+    <img src="/src/assets//framework-imgs/vuejs.png" alt="framework-img">
+  </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
