--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 </head>
 
 <body>
+
+  <button class="help-btn">?</button>
   <canvas id="canvas"></canvas>
+  <div class="help">
+  </div>
   <div class="popup hidden">
     <div class="text">
-      <h2 class="popup-title">You chose <span class="span-title"></span></h2>
+      <h2 class="popup-title"><span class="span-title"></span></h2>
       <p class="popup-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, quia?</p>
       <button class="to-website-btn">Continue</button>
       <button class="cancel-btn">Cancel</button>
