--- a/index.html
+++ b/index.html
@@ -12,10 +12,23 @@
 <body>
 
   <button class="help-btn">?</button>
+  <div class="help-popup  glass">
+    <button>&Cross;</button>
+    <h2 class="controls-title">Controls</h2>
+    <div class="controlls-container">
+
+      <div class="controlls">
+        <img src="./src/assets/help-imgs/help-control.png" alt="controlls help img">
+      </div>
+      <div class="up-arrow">
+        <img src="./src/assets/help-imgs/help-up-key.png" alt="controlls help img">
+      </div>
+    </div>
+  </div>
   <canvas id="canvas"></canvas>
   <div class="help">
   </div>
-  <div class="popup hidden">
+  <div class="popup glass hidden">
     <div class="text">
       <h2 class="popup-title"><span class="span-title"></span></h2>
       <p class="popup-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, quia?</p>
