added mobile controls

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <button class="help-btn">?</button>
-  <div class="help-popup  glass">
+  <div class="help-popup hidden glass">
     <button>&Cross;</button>
     <h2 class="controls-title">Controls</h2>
     <div class="controlls-container">
@@ -36,6 +36,12 @@
       <button class="cancel-btn">Cancel</button>
     </div>
     <img class="popup-img" src="/src/assets/framework-imgs/vuejs.png" alt="framework-img">
+  </div>
+
+  <div class="mobile-controls">
+    <button class="left-btn">&leftarrow;</button>
+    <button class="up-btn">&uparrow;</button>
+    <button class="right-btn">&rightarrow;</button>
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
