--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
     <button class="up-btn">&uparrow;</button>
     <button class="right-btn">&rightarrow;</button>
   </div>
+
+  <section class="summery">
+    <h2>Choose your Framework</h2>
+    <p>Choosing a JavaScript framework is a lot like finding a partner. We can't always tell if it will last.
+      There are many options, and we need to understand how they compare.
+      In the end, all we want is a beautiful UI and a good developer experience.
+      <br>
+      Choose wisely :)
+    </p>
+    <p class="footer">This game is open source at github.com/YoavDn/choose-your-framework
+    </p>
+  </section>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
